switched dev env to MySQL db and test env to only H2 db
