# src/main/java/com/myproject/registerApi/controller/ChildController.java
@@ -6,6 +6,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.List;
 import java.util.UUID;
 
 @RestController
@@ -26,11 +27,26 @@ public class ChildController implements ChildApi {
     }
 
     @Override
+    public ResponseEntity<List<ChildDTO>> getAllChild() {
+        return ResponseEntity
+                .ok()
+                .body(childService.getAllChildren());
+    }
+
+    @Override
     public ResponseEntity<ChildDTO> saveChild(ChildDTO childDTO) {
 
         return ResponseEntity
                 .status(HttpStatus.CREATED)
                 .body(childService.saveChild(childDTO));
+    }
+
+    @Override
+    public ResponseEntity<Void> updateChild(String id, ChildDTO childDTO) {
+        childService.updateChild(id, childDTO);
+        return ResponseEntity
+                .ok()
+                .build();
     }
 
     @Override
